Story 2439. Added CadcAlmaResolver and corresponding unit test. :